created mobile screen styling

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             word solution our company will be best <br>
             ever soon in the
         </p>
-        <button>Know More</button>
+        <button id="know-more-button">Know More</button>
     </div>
     <div class="settings">
         <h3>Settings</h3>
@@ -229,9 +229,9 @@
 </section>
 <section class="download-app">
     <div><img src="images/image copy 5.png"></div>
-    <div>
-        
-        <p>Over 50,000+Uswers</p>
+    
+    <div class="download-appText">
+        <p>Over 50,000+Users</p>
         <h1>Download <br> diti.io Mobile App</h1>
         <div id="store-icons">
             <div><i class="fa-brands fa-apple" id="apple-store">  App store</i></div>
